Mis à jour de la documentation api
