# storage/api-docs/api-docs.json
@@ -1,7 +1,7 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Your super  ApplicationAPI",
+        "title": "VozEcho API Docs",
         "version": "1.0.0"
     },
     "paths": {
@@ -15,15 +15,35 @@
                 "operationId": "store",
                 "requestBody": {
                     "description": "Record data and attachment file",
-                    "required": true
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "attachment"
+                                ],
+                                "properties": {
+                                    "attachment": {
+                                        "description": "Sélectionnez un fichier audio",
+                                        "type": "file"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
                 },
                 "responses": {
-                    "200": {
-                        "description": "File uploaded successfully",
+                    "201": {
+                        "description": "Enregistrment généré avec succès",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "properties": {
+                                        "uuid": {
+                                            "description": "Uuid",
+                                            "type": "string"
+                                        },
                                         "path": {
                                             "description": "File path",
                                             "type": "string"
@@ -34,25 +54,25 @@
                             }
                         }
                     },
-                    "400": {
-                        "description": "Invalid file format or missing file"
+                    "422": {
+                        "description": "Le format de fichier est invalide (format accepté : audio/webm)"
                     }
                 }
             }
         },
-        "/api/audio/{audio}": {
+        "/api/v1/audio/{uuid}": {
             "get": {
                 "tags": [
                     "Enregistrement"
                 ],
-                "summary": "Get audio file",
-                "description": "Get the audio file associated with the specified record.",
-                "operationId": "e3b1193aa1020bd054ed19f5a6d00180",
+                "summary": "Retourne un enregistrement audio",
+                "description": "Retourne un enregistrement audio pour l'uuid renseigné",
+                "operationId": "0870fdc5c8305f8836b9873ee2036dd0",
                 "parameters": [
                     {
                         "name": "uuid",
                         "in": "path",
-                        "description": "ID of the record",
+                        "description": "uuid de l'enregistrement",
                         "required": true,
                         "schema": {
                             "type": "string"
@@ -61,30 +81,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Successful operation",
-                        "content": {
-                            "audio/mpeg": {
-                                "schema": {
-                                    "type": "file"
-                                }
-                            }
-                        }
+                        "description": "Fichier retourné avec succès"
                     },
                     "404": {
-                        "description": "Not Found",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Fichier inexistant"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
+                        "description": "Fichier inexistant"
                     }
                 }
             }
